# regret

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  zizmor.yml
configs/experiments/: 01_baseline.yaml  01_baseline.yml  02_extended.yaml  02_extended.yml  02_extended_base.yaml  03_nk_landscape.yaml  03_nk_landscape.yml  04_trap_mutation.yml  05_jump_mutation.yml  06_plateau_mutation.yaml  06_plateau_mutation.yml  07_hiff_scale.yaml  07_hiff_scale.yml  08_layer_cake.yml  08_runtime_profile_verification.yml  09_jump_plateau.yaml  09_jump_plateau.yml  10_barrier_comparison.yaml  10_barrier_comparison.yml  11_sa_cooling_diagnostics.yml  12_nk_saturation.yaml  12_nk_saturation.yml  13_regret_scaling.yml  14_population_dynamics.yml  README.md  onemax_suite.yaml  template_boilerplate.yml
docs/: api.md  index.md  installation.md  usage.md
docs/api/: algorithms.md  analysis.md  cli.md  core.md  experiments.md  problems.md
experiments/: 01_baseline.py
notebooks/: gui_demo_petersen.ipynb
src/algorithms/: local_search.py
src/core/: base.py
src/experiments/: runner.py
src/problems/: combinatorial.py  pseudo_boolean.py
src/regret/: __init__.py  _registry.py  _types.py  cli.py
src/regret/algorithms/: __init__.py  annealing.py  evolutionary.py  local_search.py
src/regret/analysis/: __init__.py  plotting.py  profiles.py  statistics.py  tables.py
src/regret/core/: __init__.py  base.py  metrics.py
src/regret/experiments/: __init__.py  cli.py  orchestration.py  runner.py  schema.py  utils.py  validation.py
src/regret/gui/: __init__.py  interactive_widget.py  petersen_viz.py  trajectory.py
src/regret/problems/: __init__.py  combinatorial.py  landscapes.py  pseudo_boolean.py
tests/: conftest.py  test_algorithms.py  test_core_base.py  test_experiments_analyze.py  test_experiments_plotting_budget.py  test_experiments_runner.py  test_experiments_validation.py  test_gui_petersen_viz.py  test_integration.py  test_metrics.py  test_problems.py
