[project]
name = "regret"
version = "0.1.0"
description = "A Benchmarking Framework for Black-Box Combinatorial Optimisation"
readme = "README.md"
authors = [
    { name = "Manoj Manikandan", email = "manoj.manikandan@student.manchester.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema[format]>=4.26.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[project.scripts]
run_experiment = "regret.experiments.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.14.10",
]
