[project]
name = "regret"
version = "0.1.0"
description = "A Benchmarking Framework for Black-Box Combinatorial Optimisation"
readme = "README.md"
authors = [
  { name = "Manoj Manikandan", email = "manoj.manikandan@student.manchester.ac.uk" },
]

license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.2.0",
  "ipympl>=0.10.0",
  "ipywidgets>=8.1.8",
  "jsonschema[format]>=4.26.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "networkx>=3.6.1",
  "numpy>=2.4.3",
  "pandas>=2.3.3",
  "pyyaml>=6.0.3",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
  "typer>=0.24.1",
]

[project.scripts]
run_experiment = "regret.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typecheck" },
]
lint = ["ruff"]
test = [
    "coverage",
    "pytest",
    "tabulate",
]
typecheck = ["ty"]
docs = ["zensical", "mkdocstrings-python"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
exclude = ["src/regret/experiments/schema.py"]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# UP040: Use `type` keyword for type aliases - disabled because ty type checker
# doesn't properly handle `type X = ...` syntax with literal dict compatibility
"src/regret/_types.py" = ["UP040"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  "@typing.overload",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
